# Employee_Attrition_Prediction

./: .gitignore  README.md  pyproject.toml
model/: binary_mappings.pkl  model.pkl  preprocessor.pkl
notebook/: attrition_prediction.ipynb  attrition_prediction_executed.ipynb
streamlit_app/: app.py
streamlit_app/.streamlit/: config.toml
