[project]
name = "employee-attrition-prediction"
version = "0.1.0"
description = "Predict employee attrition using ML classification models"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "xgboost>=3.3.0",
]
